# verona

./: .llvm-ci.yml  .vsts-ci.yml  CMakeLists.txt
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  grammar.peg  sym.cc
src/mlir/: CMakeLists.txt  README.md  ast-utils.cc  ast-utils.h  generator.cc  generator.cpp  generator.h  symbol.h  verona-mlir.cc  verona-mlir.cpp  verona-opt.cpp
src/mlir/dialect/: CMakeLists.txt  VeronaDialect.cc  VeronaDialect.cpp  VeronaDialect.h  VeronaDialect.td  VeronaOps.cc  VeronaOps.cpp  VeronaOps.h  VeronaOps.td
src/rt/ds/: morebits.h
src/rt/sched/: cown.h  schedulerthread.h
src/rt/test/perf/backpressure2/: backpressure2.cc
testsuite/: CMakeLists.txt
testsuite/demo/run-pass/: fib.mlir
testsuite/mlir/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
testsuite/mlir/CLI/: cmd.mlir
testsuite/mlir/Dialect/: dummy.mlir  function.verona
utils/azure/: create-scale-set.sh
utils/llvm/: download-llvm.sh  setup-llvm-builddir.sh
